// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button snapshot - danger 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-1 makeStyles-danger-8"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    danger
  </span>
</button>
`;

exports[`Button snapshot - info 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-1 makeStyles-info-5"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    info
  </span>
</button>
`;

exports[`Button snapshot - primary 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-1 makeStyles-primary-4"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    primary
  </span>
  <span
    className="MuiTouchRipple-root"
  />
</button>
`;

exports[`Button snapshot - rose 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-1 makeStyles-rose-9"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    rose
  </span>
  <span
    className="MuiTouchRipple-root"
  />
</button>
`;

exports[`Button snapshot - success 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-1 makeStyles-success-6"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    success
  </span>
  <span
    className="MuiTouchRipple-root"
  />
</button>
`;

exports[`Button snapshot - warning 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-1 makeStyles-warning-7"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    Warning
  </span>
</button>
`;
